<resources>
    <string name="app_name">ProjeManager</string>
    <string name="image_contentDescription">image</string>
    <string name="proje_manager">Proje Manager</string>
    <string name="introSubText1">Let\'s Get Started</string>
    <string name="introSubText2">Collaborate and plan together across multiple platforms using Proje Manager\'s minimalist interface</string>
    <string name="iv_intro">Image view for Intro Page</string>
    <string name="sign_in_button">SIGN IN</string>
    <string name="sign_up_button">SIGN UP</string>
    <string name="tv_sign_up">Enter your Email Id, your Name and your Password to register with us.</string>
    <string name="et_name">Name</string>
    <string name="et_email">Email ID</string>
    <string name="tv_toolbar_signUp">SIGN UP</string>
    <string name="tv_toolbar_signIn">SIGN In</string>
    <string name="et_password">Password</string>
    <string name="tv_signIn">Enter your Email and Password to login.</string>
    <string name="please_wait">Please wait...</string>
    <string name="app_logo">App Logo</string>
    <string name="nav_profile_image">nav profile image</string>
    <string name="my_profile_title">My Profile</string>
    <string name="nav_sign_out">Sign Out</string>
    <string name="iv_username">iv username</string>
    <string name="name">NAME</string>
    <string name="edit">Edit</string>
    <string name="e_mail">E-MAIL ID</string>
    <string name="phone">PHONE</string>
    <string name="add_phone">ADD PHONE</string>
    <string name="update">UPDATE</string>
    <string name="add_a_new_board">Add a new board</string>
    <string name="create_board_title">Create Board</string>
    <string name="board_name">Board Name</string>
    <string name="board_image">Board Image</string>
    <string name="create">CREATE</string>
    <string name="no_boards_available">No Boards available!!!</string>
    <string name="action_add_list">Add List</string>
    <string name="hint_list_name">List Name</string>
    <string name="action_add_card">Add Card</string>
    <string name="hint_card_name">Card Name</string>
    <string name="add_list">Add List</string>
    <string name="members">Members</string>
    <string name="add_member">Add Member</string>
    <string name="cancel">CANCEL</string>
    <string name="add">ADD</string>
    <string name="search_member">Search Member</string>
    <string name="label_color">Label Color</string>
    <string name="select_color">Select Color</string>
    <string name="select_members">Select Members</string>
    <string name="due_date">Due Date</string>
    <string name="select_due_date">Select Due Date</string>
    <string name="delete">delete</string>
    <string name="str_select_label_color">Select Label Color</string>
    <string name="str_select_member">Select member</string>
    <string name="default_notification_channel_id">projeManager_notification_channel_id</string>
</resources>