<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/paddingAll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    tools:context=".activities.IntroActivity">

    <TextView
        android:id="@+id/introText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/proje_manager"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/headingTextSize"
        android:textStyle="normal"
        android:layout_marginTop="@dimen/marginLarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginLarge"
        android:src="@drawable/ic_task_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/introText"
        android:contentDescription="@string/iv_intro" />

    <TextView
        android:id="@+id/introSubText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginLarge"
        android:text="@string/introSubText1"
        android:textColor="@color/primaryTextColor"
        android:textSize="@dimen/textSizeLarge"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_intro" />

    <TextView
        android:id="@+id/introSubText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/marginNormal"
        android:textAlignment="center"
        android:text="@string/introSubText2"
        android:textColor="@color/secondaryTextColor"
        android:textSize="@dimen/textSizeSmall"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/introSubText1" />

    <Button
        android:id="@+id/button_signIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginLarge"
        android:background="@drawable/ic_gradient_button_intro"
        android:backgroundTintMode="src_over"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:padding="@dimen/paddingAll"
        android:text="@string/sign_in_button"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/introSubText2" />

    <Button
        android:id="@+id/button_signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginLarge"
        android:background="@drawable/ic_stroke_button_intro"
        android:backgroundTintMode="src_over"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:padding="@dimen/paddingAll"
        android:text="@string/sign_up_button"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_signIn" />
</androidx.constraintlayout.widget.ConstraintLayout>