<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CreateBoardActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/tbAddBoard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_add_board"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/AppTheme.popUpOverlay"/>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tbAddBoard">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginLarge"
            android:layout_marginEnd="@dimen/marginNormal"
            android:layout_marginStart="@dimen/marginNormal"
            android:padding="@dimen/paddingAll"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/card_view_corner_radius"
            app:cardElevation="@dimen/card_view_elevation"
            style="@style/CardView.Light">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/paddingAll"
                android:gravity="center"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_board_image"
                    android:layout_width="@dimen/create_board_image_size"
                    android:layout_height="@dimen/create_board_image_size"
                    android:layout_margin="@dimen/marginLarge"
                    app:civ_border_color="@color/white"
                    app:civ_border_width="@dimen/nav_circular_border_width"
                    android:contentDescription="@string/board_image"
                    android:src="@drawable/ic_default_board"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tbMyProfile"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_board_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/marginNormal"
                    android:padding="@dimen/paddingAll"
                    android:hint="@string/board_name"
                    android:textColorHint="@color/secondaryTextColor"
                    style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox.Dense">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_board_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/marginSmall"
                        android:textSize="@dimen/textSizeSmall"
                        android:textColor="@color/primaryTextColor"
                        android:inputType="textEmailAddress"/>
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_create_board"
                    android:layout_width="match_parent"
                    android:layout_height="48sp"
                    android:layout_margin="@dimen/marginLarge"
                    android:background="@drawable/ic_gradient_button_intro"
                    android:backgroundTintMode="src_over"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:padding="@dimen/paddingAll"
                    android:text="@string/create"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="22sp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>